--- a/src/main/resources/templates/leaderboard.mustache
+++ b/src/main/resources/templates/leaderboard.mustache
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Leaderboard</title>
-    <link rel="stylesheet" href="/css/leaderboard.css">
+    <link rel="stylesheet" href="/css/tables.css">
 </head>
 <body>
 
