--- a/src/main/resources/static/css/tables.css
+++ b/src/main/resources/static/css/tables.css
@@ -14,23 +14,24 @@ h1 {
     margin-top: 20px;
 }
 
-#leaderboard-table {
+#leaderboard-table, #ranking-table {
     border-collapse: collapse;
     width: 100%;
     max-width: 800px;
     margin-top: 20px;
 }
 
-#leaderboard-table th,
-#leaderboard-table td {
+#leaderboard-table th, #leaderboard-table td,
+#ranking-table th, #ranking-table td {
     border: 1px solid #ddd;
     padding: 12px;
     text-align: center;
 }
 
-#leaderboard-table th {
+#leaderboard-table th, #ranking-table th {
     background-color: #444;
 }
+
 
 #back-button {
     position: absolute;
